# safedrive

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  turbo.json
src/: assets.rs  auth.rs  cache.rs  engine.rs  error.rs  main.rs  registry.rs  settings.rs  state.rs  strategies.rs  transfer.rs  vault.rs
src/adapters/: baidupan.rs  localfs.rs  mod.rs  webdav.rs
src/crypto/: mod.rs  names.rs  short_text.rs  unishox2.rs
src/routes/: baidu_qr.rs  ds.rs  files.rs  mod.rs  share.rs  share_codec.rs  strategies.rs  system.rs  webdav.rs
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: full.e2e.test.ts  webdav.e2e.test.ts
web/e2e-browser/: app.spec.ts
web/src/: App.tsx  app.css  main.tsx
web/src/api/: client.ts
web/src/components/: MoveModal.tsx  PreviewModal.tsx  SourceModal.tsx  TaskDrawer.tsx
web/src/e2e/: full.e2e.test.ts  webdav.e2e.test.ts
web/src/pages/: BrowserPage.tsx  DataPage.tsx  LoginPage.tsx  SettingsPage.tsx  SourcesPage.tsx  StrategiesPage.tsx
web/src/stores/: auth.ts  sources.ts  tasks.ts  transfers.ts
web/src/utils/: format.test.ts  format.ts
