[package]
name = "safedrive"
version = "0.2.0"
edition = "2024"
description = "端到端零知识加密的数据源管理 Web 客户端（单二进制，前端嵌入）"
license = "MIT"
repository = "https://github.com/qy527145/safedrive"
# 前端产物 web/dist 随仓库提交并随包发布，cargo install（crates.io / --git）均不依赖 bun/npm；
# 改动 web/ 后需执行 bun run --cwd web build 并将 dist 一并提交
include = ["/src/**", "/build.rs", "/web/dist/**", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "1"
aes-siv = "0.7"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1"
chacha20 = "0.9"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
futures-util = "0.3"
getrandom = "0.3"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
httpdate = "1"
mime_guess = "2"
md-5 = "0.10"
percent-encoding = "2"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "rustls-tls-native-roots"] }
rust-embed = { version = "8", features = ["mime-guess"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
